# pmcollection

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
benchmarks/: bench_download.py  bench_read_yaml.py
python/pmcollection/: __init__.py  __version__.py  constants.py  schemas.py  structs.py  utils.py
src/: lib.rs
