[package]
name = "pmcollection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pmcollection"
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.0.30"
futures = "0.3.30"
pyo3 = "0.20.3"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"]}
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["fs"] }
