[project]
name = "pmcollection"
version = "0.1.0"
description = "The go-to package to download and manipulate PubMed data."
dependencies = [
    "pydantic>=2.8.2",
    "rxml>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.1.2",
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.5",
    "rich>=13.7.1",
]

[tool.maturin]
python-source = "python"
module-name = "pmcollection._lowlevel"
features = ["pyo3/extension-module"]
